--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,8 @@
 PORT=3000
+
 POSTGRES_USER=postgres
 POSTGRES_DB=MY-DB
 POSTGRES_PASSWORD=123123
 POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
+
+JWT_SECRET=asdnjasndjasmaodnasiod
