--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,5 @@ POSTGRES_PASSWORD=123123
 POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
 
 JWT_SECRET=asdnjasndjasmaodnasiod
+
+SALT_ROUNDS=10
