Update .env.template - added POSTGRES_PORT

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,10 @@
 PORT=3000
 
+POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_DB=MY-DB
 POSTGRES_PASSWORD=123123
-POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
+POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/${POSTGRES_DB}
 
 JWT_SECRET=asdnjasndjasmaodnasiod
 
