--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,11 @@
 PORT=3000
 
 POSTGRES_PORT=5432
+POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
-POSTGRES_DB=MY-DB
+POSTGRES_DB=NEST-STORE
 POSTGRES_PASSWORD=123123
-POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/${POSTGRES_DB}
+POSTGRES_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 JWT_SECRET=asdnjasndjasmaodnasiod
 
